--- a/PRIMER_ENTREGA_PROYECTO/index.html
+++ b/PRIMER_ENTREGA_PROYECTO/index.html
@@ -32,7 +32,7 @@
                         </label>
                     <input type="number"  placeholder='Ingrese monto ...'></input>
                 </div>
-                <button class='btn' onclick="mensaje()">Agregar movimiento</button>
+                <button id='btn'>Agregar movimiento</button>
             </form>
         </div>
         <script src="main.js"></script>
